@@ -1,16 +1,22 @@
 package TubeSlice.tubeSlice.domain.post;
 
+import TubeSlice.tubeSlice.domain.follow.FollowRepository;
 import TubeSlice.tubeSlice.domain.keyword.KeywordConverter;
 import TubeSlice.tubeSlice.domain.keyword.dto.response.KeywordResponseDto;
-import TubeSlice.tubeSlice.domain.post.dto.PostResponseDto;
+import TubeSlice.tubeSlice.domain.post.dto.response.PostResponseDto;
+import TubeSlice.tubeSlice.domain.user.User;
+import TubeSlice.tubeSlice.domain.user.dto.response.UserResponseDto;
+import org.springframework.data.domain.Page;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class PostConverter {
+
 
     public static String toCreatedFormat(LocalDateTime createdAt){
         LocalDateTime now = LocalDateTime.now();
@@ -54,10 +60,55 @@ public class PostConverter {
                 .build();
     }
 
-    public static List<PostResponseDto.PostInfoDto> toPostInfoDtoList(List<Post> postList){
-        return postList.stream()
+    public static PostResponseDto.PostInfoListDto toPostInfoDtoList(Page<Post> postList){
+        List<PostResponseDto.PostInfoDto> postInfoDtoList = new java.util.ArrayList<>(postList.stream()
                 .map(PostConverter::toPostInfoDto)
-                .collect(Collectors.toList());
+                .toList());
 
+        Collections.reverse(postInfoDtoList);
+
+        return PostResponseDto.PostInfoListDto.builder()
+                .isLast(postList.isLast())
+                .isFirst(postList.isFirst())
+                .totalElement(postList.getTotalElements())
+                .totalPage(postList.getTotalPages())
+                .listSize(postInfoDtoList.size())
+                .posts(postInfoDtoList)
+                .build();
+
+    }
+
+    public static PostResponseDto.SinglePostInfoDto toSinglePostDto(User user, Post post, Boolean isFollowing, Boolean isLike){
+        boolean isMine = post.getUser() == user;
+
+        User writer = post.getUser();
+
+        UserResponseDto.PostUserInfo writerInfo = UserResponseDto.PostUserInfo.builder()
+                .userId(writer.getId())
+                .nickname(writer.getNickname())
+                .profileUrl(writer.getProfileUrl())
+                .isFollowing(isFollowing)
+                .build();
+        PostResponseDto.PostInfoDto postInfo = toPostInfoDto(post);
+
+        String createdAt = toCreatedFormat(post.getCreatedAt());
+        List<KeywordResponseDto.KeywordResultDto> keywordList = KeywordConverter.toPostKeywordDtoList(post);
+        PostResponseDto.SinglePostUserInfoDto postInfoDto = PostResponseDto.SinglePostUserInfoDto.builder()
+                .writer(writerInfo)
+                .title(post.getTitle())
+                .postId(post.getId())
+                .content(post.getContent())
+                .keywords(keywordList)
+                .videoUrl(post.getVideoUrl())
+                .likeNum(post.getPostLikeList().size())
+                .commentNum(post.getCommentList().size())
+                .createdAt(createdAt)
+                .build();
+
+        return PostResponseDto.SinglePostInfoDto.builder()
+                .isLike(isLike)
+                .isMine(isMine)
+                .post(postInfoDto)
+                .build();
     }
 }
